# api.yml
@@ -32,6 +32,10 @@ paths:
           in: "query"
           description: "Filter results for a maximum sorted distance between highlighted notes"
           type: "integer"
+        - name: "transposition"
+          in: "query"
+          description: "An enum: what type of transpositions of the query will be returned"  
+          type: "integer"
       responses:
         200:
           description: "The server successfully completed a search for the music query and is returning the result(s)" 
