# flask_api/server/controllers/search.py
@@ -3,7 +3,7 @@ import music21
 
 from flask import Response, request, url_for
 
-from smr_search.indexers import legacy_intra_vectors
+from smr_search.indexers import legacy_intra_vectors, NotePointSet
 from smr_search.dpwc import search_scores, paginate, filter_results, rank_results
 from server.exceptions import BadQueryError
 
@@ -13,6 +13,7 @@ def search_controller(music_encoding, query_string, dataloc):
     query = music21.converter.parse(query_string)
     window = int(request.args.get("maxTargetWindow"))
     threshold = int(request.args.get("minOccLength"))
+    transposition = int(request.args.get("transposition"))
 
     if len(query.flat.notes) < 3:
         raise BadQueryError("Query must be at least three notes long!")
@@ -22,7 +23,7 @@ def search_controller(music_encoding, query_string, dataloc):
     logger.info("controllers.search::search_controler() --- searching in {1} for \n{0}".format(query_string, dataloc))
     results = search_scores(indexed_query, dataloc)
 
-    filtered_results = filter_results(results, threshold = threshold, window = window, diatonic = True)
+    filtered_results = filter_results(results, threshold = threshold, query_length = len(NotePointSet(query)), transposition = transposition)
     ranked_results = rank_results(results)
 
     for r in results:
